# sounio

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DEVELOPER.md  LICENSE  MANIFESTO.md  README.md  ROADMAP_L0.md
compiler/: Cargo.toml  build.rs
compiler/benches/: README.md  compiler_bench.rs  gpu_bench.rs  layout_bench.rs  locality_bench.rs  ontology_bench.rs  propagation_benchmark.rs
compiler/benches/samples/: data_structures.sounio  effects_benchmark.sounio  fibonacci.sounio  linear_types.sounio  pk_model.sounio
compiler/benchmarks/compile_time/: mod.rs
compiler/docs/: KNOWN_LIMITATIONS.md  RELEASE_v0.29.0.md
compiler/examples/: unified_epistemic_science.rs
compiler/fuzz/: Cargo.toml  README.md
compiler/fuzz/fuzz_targets/: fuzz_full_pipeline.rs  fuzz_lexer.rs  fuzz_parser.rs
compiler/src/: common.rs  diagnostics.rs  lib.rs  main.rs  module_loader.rs
compiler/src/analyze/: dead_code.rs  metrics.rs  mod.rs
compiler/src/ast/: mod.rs
compiler/src/bio/: dna.rs  gf4.rs  mod.rs  quaternion.rs  transmission.rs
compiler/src/cache/: mod.rs
compiler/src/causal/: composition.rs  counterfactual.rs  dag.rs  do_calculus.rs  effects.rs  graph.rs  identifiability.rs  identification.rs  intervention.rs  knowledge.rs  mod.rs  refutation.rs  structural.rs  uplift.rs  uplift_syntax.rs  z3_identify.rs
compiler/src/check/: compatibility.rs  diagnostics.rs  epistemic.rs  extern_tests.rs  mod.rs
compiler/src/codegen/: autodiff.rs  cranelift.rs  julia.rs  mod.rs  simd.rs
compiler/src/dependent/: gradual.rs  inference.rs  mod.rs  predicates.rs  proof_search.rs  proofs.rs  subtyping.rs  types.rs
compiler/src/diagnostic/: codes.rs  emitter.rs  epistemic.rs  mod.rs  progress.rs  render.rs  semantic.rs  suggestion.rs  type_diff.rs  typo.rs
compiler/src/distributed/: cache.rs  client.rs  mod.rs  protocol.rs  reproducible.rs  server.rs
compiler/src/doc/: doctest.rs  extract.rs  mod.rs  model.rs  parser.rs
compiler/src/effects/: inference.rs  mod.rs
compiler/src/epistemic/: bayesian.rs  beta_knowledge.rs  confidence.rs  evolution.rs  firewall.rs  heterogeneity.rs  kec.rs  knowledge.rs  merkle.rs  mod.rs  models.rs  operations.rs  promotion.rs  provenance.rs  refined_epistemic.rs  temporal.rs  time_travel.rs
compiler/src/fmt/: config.rs  ir.rs  mod.rs  printer.rs
compiler/src/geometry/: algebraic.rs  alpha_geo_zero.rs  engine.rs  final_integration.rs  geo_game.rs  geo_training.rs  imo_benchmark.rs  imo_parser.rs  mod.rs  predicates.rs  primitives.rs  proof_state.rs  reasoning_effect.rs  rules.rs  self_play.rs  showcase.rs  synthetic.rs
compiler/src/hir/: async_transform.rs  mod.rs
compiler/src/hlir/: builder.rs  ir.rs  lower.rs  mod.rs
compiler/src/incremental/: edits.rs  lexer.rs  mod.rs  parser.rs
compiler/src/interop/: coq.rs  isabelle.rs  lean.rs  mod.rs
compiler/src/interp/: autodiff.rs  builtins.rs  causal.rs  closure.rs  env.rs  eval.rs  mod.rs  symbolic.rs  value.rs
compiler/src/layout/: cluster.rs  constraint.rs  diagnostics.rs  distance.rs  extract.rs  instrument.rs  mod.rs  plan.rs  report.rs  solver.rs  visualize.rs
compiler/src/lexer/: mod.rs  tokens.rs
compiler/src/linear/: consumption.rs  context.rs  exponentials.rs  integrate.rs  kind.rs  linear_types.rs  mod.rs  modality.rs  resource.rs  session_types.rs  subtyping.rs  typed.rs
compiler/src/lint/: config.rs  mod.rs  rules.rs
compiler/src/llm/: client.rs  confidence.rs  mod.rs  prompts.rs
compiler/src/locality/: access.rs  codegen.rs  hir_analysis.rs  mod.rs  numa.rs  packing.rs  prefetch.rs  subtyping.rs  types.rs
compiler/src/lsp/: analysis.rs  code_actions.rs  completion.rs  definition.rs  diagnostics.rs  document.rs  epistemic.rs  hover.rs  inlay_hints.rs  mod.rs  references.rs  semantic_tokens.rs  server.rs  workspace.rs
compiler/src/macro_system/: ctfe.rs  declarative.rs  derive.rs  mod.rs  pattern.rs  proc_macro.rs  tests.rs  token_tree.rs
compiler/src/memory/: mod.rs
compiler/src/mlir/: mod.rs
compiler/src/ontology/: cache.rs  federated.rs  fidelity.rs  mod.rs  primitive.rs  resolver.rs  semantic_sql.rs  sssom.rs
compiler/src/optimizer/: epistemic.rs  mod.rs
compiler/src/ownership/: checker.rs  mod.rs  state.rs
compiler/src/parallel/: lexer.rs  mod.rs
compiler/src/parser/: errors.rs  mod.rs  recovery.rs
compiler/src/pkg/: auth.rs  build.rs  cache.rs  cli.rs  manifest.rs  mod.rs  registry.rs  resolver.rs
compiler/src/profiling/: mod.rs
compiler/src/quantum/: README.md  amplitude.rs  circuit.rs  epistemic_vqe.rs  gates.rs  gpu_quantum.rs  hamiltonian.rs  mod.rs  noise.rs  pennylane.rs  states.rs  uccsd.rs  vqe.rs
compiler/src/query/: database.rs  mod.rs  queries.rs
compiler/src/refactor/: extract.rs  mod.rs  rename.rs
compiler/src/refinement/: constraint.rs  infer.rs  mod.rs  predicate.rs  qualifiers.rs  solver.rs  subtype.rs
compiler/src/repl/: mod.rs
compiler/src/resolve/: mod.rs  resolver.rs  symbols.rs
compiler/src/rl/: game.rs  mcts.rs  mod.rs  muzero.rs  neural.rs  refinements.rs  selfplay.rs
compiler/src/runtime/: async_runtime.rs  causal.rs  discover.rs  einsum.rs  epistemic.rs  gpu_epistemic.rs  gpu_executor.rs  gpu_scientific.rs  io.rs  mod.rs  ode.rs  pde.rs  prob.rs  stiff.rs  symbolic.rs  tensor.rs  uncertain.rs
compiler/src/semantic_diagnostics/: mod.rs  semantic_errors.rs
compiler/src/smt/: epistemic.rs  formula.rs  interval.rs  mod.rs  solver.rs  z3_solver.rs
compiler/tests/: async_integration.rs  e2e_tests.rs  epistemic_integration.rs  formatter_tests.rs  gpu_diagnostics_test.rs  gpu_multi_gpu_test.rs  gpu_optimization_test.rs  gpu_profiler_test.rs  gpu_quantize_test.rs  imported_extern_exports.rs  integration_gpu_epistemic.rs  integration_metal.rs  integration_ontology_e2e.rs  integration_semantic_types.rs  pkg_integration.rs  proptest_integration.proptest-regressions  proptest_integration.rs  quantum_epistemic_vqe.rs  while_loop_tests.rs
docs/: CNAME  (+6 more)
jupyter/: Cargo.toml  install.py  kernel.json
jupyter/src/: lib.rs  main.rs
runtime/: Cargo.toml
runtime/src/: intrinsics.rs  lib.rs  memory.rs
(+763 files in other folders)
