[package]
name = "souc"
version = "0.93.0"
edition = "2024"
authors = ["Demetrios Chiuratto Agourakis <demetrios@sounio-lang.org>", "Dionisio Chiuratto Agourakis"]
description = "The Sounio Programming Language Compiler - epistemic computing at the horizon of certainty"
license = "MIT OR Apache-2.0"
repository = "https://github.com/sounio-lang/sounio"
homepage = "https://sounio-lang.org"
documentation = "https://docs.rs/sounio"
readme = "README.md"
keywords = ["compiler", "programming-language", "epistemic", "scientific-computing"]
categories = ["compilers", "development-tools", "science"]

[[bin]]
name = "souc"
path = "src/main.rs"

[lib]
name = "sounio"
path = "src/lib.rs"

[dependencies]
# Error handling
miette = { version = "7", features = ["fancy"] }
thiserror = "1"

# CLI
clap = { version = "4", features = ["derive"] }

# Data structures
indexmap = "2"
petgraph = "0.6"
id-arena = "2"

# String interning
string-interner = "0.17"

# Serialization (for AST dump, etc.)
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Markdown parsing for documentation
pulldown-cmark = "0.10"

# Logos for lexer generation
logos = "0.14"

# Source code management
codespan-reporting = "0.11"

# Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# File system utilities
walkdir = "2"

# Build system dependencies
sha2 = "0.10"
hex = "0.4"
bincode = "1.3"
glob = "0.3"
num_cpus = "1.16"

# Watch mode and signal handling
ctrlc = "3.4"

# Cross-compilation and target support
which = "6"
dirs = "5"
chrono = "0.4"

# Ontology support
lru = "0.12"
rusqlite = { version = "0.31", features = ["bundled"], optional = true }

# Ontology parsing (RDF/OWL)
rio_turtle = { version = "0.8", optional = true }
rio_xml = { version = "0.8", optional = true }
rio_api = { version = "0.8", optional = true }

# LLM integration (optional)
regex = { version = "1.10", optional = true }
lazy_static = { version = "1.4", optional = true }

# Cranelift JIT (optional)
cranelift-codegen = { version = "0.116", optional = true }
cranelift-frontend = { version = "0.116", optional = true }
cranelift-jit = { version = "0.116", optional = true }
cranelift-module = { version = "0.116", optional = true }
cranelift-native = { version = "0.116", optional = true }
target-lexicon = { version = "0.12", optional = true }

# REPL
rustyline = "14"

# SMT Solver for refinement types (optional)
z3 = { version = "0.12", features = ["static-link-z3"], optional = true }

# LLVM Backend (optional) - supports multiple LLVM versions via features
# Use llvm14, llvm15, llvm16, or llvm17 feature to select version
inkwell = { version = "0.5", optional = true }

# GPU Backend (optional)
rspirv = { version = "0.12", optional = true }
spirv = { version = "0.3", optional = true }
cudarc = { version = "0.12", optional = true, features = ["driver", "cuda-version-from-build-system"] }
rustc-hash = "2.0"

# LSP Server (optional)
tower-lsp = { version = "0.20", optional = true }
tokio = { version = "1.35", features = ["full"], optional = true }
async-trait = { version = "0.1", optional = true }
dashmap = { version = "5.5", optional = true }
ropey = { version = "1.6", optional = true }
url = { version = "2.5", optional = true }

# Distributed builds (optional)
axum = { version = "0.7", optional = true }
reqwest = { version = "0.11", features = ["json"], optional = true }
flate2 = { version = "1.0", optional = true }
tower = { version = "0.4", optional = true }
tower-http = { version = "0.5", features = ["fs", "cors"], optional = true }
hyper = { version = "1.0", optional = true }
rand = { version = "0.8", optional = true }
serde_yaml = { version = "0.9", optional = true }

[dev-dependencies]
criterion = "0.5"
pretty_assertions = "1"
proptest = "1"
insta = { version = "1", features = ["yaml"] }
tempfile = "3"
regex = "1.10"

[features]
default = []
# Enable LLVM backend with LLVM 15 (default, requires LLVM 15 installation)
# Note: Code uses LLVM 15 opaque pointer APIs
llvm = ["llvm15"]
# LLVM version-specific features
llvm14 = ["dep:inkwell", "inkwell/llvm14-0"]
llvm15 = ["dep:inkwell", "inkwell/llvm15-0"]
llvm16 = ["dep:inkwell", "inkwell/llvm16-0"]
llvm17 = ["dep:inkwell", "inkwell/llvm17-0"]
# Enable Cranelift JIT
jit = [
    "dep:cranelift-codegen",
    "dep:cranelift-frontend",
    "dep:cranelift-jit",
    "dep:cranelift-module",
    "dep:cranelift-native",
    "dep:target-lexicon",
]
# Enable GPU codegen (PTX and SPIR-V)
gpu = ["dep:rspirv", "dep:spirv"]
# Enable CUDA runtime execution (requires CUDA toolkit)
cuda = ["dep:cudarc"]
# Enable Z3 SMT solver for refinement type verification
smt = ["dep:z3"]
# Enable LSP server
lsp = [
    "dep:tower-lsp",
    "dep:tokio",
    "dep:async-trait",
    "dep:dashmap",
    "dep:ropey",
    "dep:url",
]
# Enable distributed builds
distributed = [
    "dep:tokio",
    "dep:axum",
    "dep:reqwest",
    "dep:flate2",
    "dep:tower",
    "dep:tower-http",
    "dep:hyper",
    "dep:rand",
    "dep:serde_yaml",
]
# Enable ontology support with SQLite backend
ontology = ["dep:rusqlite"]
# Enable ontology build tools (OWL/RDF parsing)
ontology-build = ["dep:rio_turtle", "dep:rio_xml", "dep:rio_api"]
# Enable LLM integration for ontology generation and epistemic agents
llm = ["dep:regex", "dep:lazy_static"]
# Enable remote cache for distributed builds
remote-cache = ["distributed"]
# Enable cryptographic signatures for ontology versioning
crypto = []
# Enable network access for BioPortal API
network = ["dep:reqwest"]
# Enable all features
full = ["llvm", "jit", "gpu", "smt", "lsp", "distributed", "ontology", "llm", "remote-cache", "crypto"]

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
# Faster compile times
opt-level = 0
debug = true

[[test]]
name = "integration_semantic_types"
path = "tests/integration_semantic_types.rs"

[[bin]]
name = "sounio-lsp"
path = "src/bin/lsp.rs"
required-features = ["lsp"]

[[bin]]
name = "sounio-ontology-build"
path = "src/bin/sounio-ontology-build.rs"

[[bench]]
name = "layout_bench"
harness = false

[[bench]]
name = "locality_bench"
harness = false

[[bench]]
name = "ontology_bench"
harness = false

[[bench]]
name = "gpu_bench"
harness = false

[[test]]
name = "integration_ontology_e2e"
path = "tests/integration_ontology_e2e.rs"
