[package]
name = "sounio-jupyter"
version = "0.1.0"
edition = "2024"
authors = ["Demetrios Chiuratto Agourakis <demetrios@sounio-lang.org>"]
description = "Jupyter kernel for the Sounio programming language"
license = "MIT OR Apache-2.0"
repository = "https://github.com/sounio-lang/sounio"
keywords = ["jupyter", "kernel", "sounio", "scientific-computing"]

[[bin]]
name = "sounio-jupyter"
path = "src/main.rs"

[lib]
name = "sounio_jupyter"
path = "src/lib.rs"

[dependencies]
# Sounio compiler (library name is 'sounio', package name is 'souc')
sounio = { path = "../compiler", package = "souc" }

# ZeroMQ for Jupyter wire protocol
zeromq = "0.4"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# UUID generation
uuid = { version = "1", features = ["v4"] }

# HMAC for message signing
hmac = "0.12"
sha2 = "0.10"

# Hex encoding for signatures
hex = "0.4"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Error handling
thiserror = "1"

# Time for ISO timestamps
chrono = "0.4"

# Tracing for debugging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
