[package]
name = "sounio-runtime"
version = "0.93.0"
edition = "2021"
authors = ["Demetrios Chiuratto Agourakis", "Dionisio Chiuratto Agourakis"]
license = "MIT OR Apache-2.0"
description = "Runtime library for the Sounio programming language"
repository = "https://github.com/sounio-lang/sounio"
keywords = ["sounio", "runtime", "epistemic", "scientific"]
categories = ["science", "development-tools"]

[lib]
crate-type = ["rlib", "cdylib", "staticlib"]

[dependencies]

[dev-dependencies]

[features]
default = []
